--- a/src/shortening_service/templates/shortening_service/index.html
+++ b/src/shortening_service/templates/shortening_service/index.html
@@ -2,8 +2,29 @@
 <html>
 <head>
     <title>URL Short</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet">
+    <style>
+    body {
+        font-family: 'Teko', sans-serif;
+        color: #252A34;
+        text-align: center;
+        background-color: #8BC6EC;
+        background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    }
 
+
+    #main_box {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    </style>
+
+</head>
 <body>
     <div id="main_box">
         <div id="header">
@@ -13,11 +34,14 @@
             <p>To generate a short link to your URL simple enter a URL in the source field and click 'Generate' </p>
         </div>
         <div>
-            <label>Source:</label>
+            <label>Source - </label>
             <input type="text">
             <button type="button">Generate!</button>
         </div>
+        <p>You will then see your generated link below</p>
+        <div id="generated_link">
 
+        </div>
     </div>
 </body>
 
