--- a/src/shortening_service/templates/shortening_service/index.html
+++ b/src/shortening_service/templates/shortening_service/index.html
@@ -12,6 +12,7 @@
         text-align: center;
         background-color: #8BC6EC;
         background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+        font-size: 200%
     }
 
 
