--- a/src/shortening_service/templates/shortening_service/index.html
+++ b/src/shortening_service/templates/shortening_service/index.html
@@ -23,8 +23,43 @@
         left: 50%;
         transform: translate(-50%, -50%);
     }
-    </style>
 
+    #generate {
+        background: #FF4742;
+        border: 1px solid #FF4742;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        display: inline-block;
+        font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+        font-size: 16px;
+        font-weight: 800;
+        line-height: 16px;
+        min-height: 40px;
+        outline: 0;
+        padding: 12px 14px;
+        text-align: center;
+        text-rendering: geometricprecision;
+        text-transform: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+    }
+
+    #generate:hover,
+    #generate:active {
+        background-color: initial;
+        background-position: 0 0;
+        color: #FF4742;
+    }
+
+    #button-24:active {
+        opacity: .5;
+    }
+</style>
 </head>
 <body>
     <div id="main_box">
@@ -37,7 +72,7 @@
         <div>
             <label>Source - </label>
             <input type="text">
-            <button type="button">Generate!</button>
+            <button id="generate" role="generate" type="button">Generate!</button>
         </div>
         <p>You will then see your generated link below</p>
         <div id="generated_link">
