update instructions to generate

--- a/src/shortening_service/templates/shortening_service/index.html
+++ b/src/shortening_service/templates/shortening_service/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>URL Short</title>
+    <title>URL Short </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet">
@@ -70,10 +70,10 @@
 <body>
     <div id="main_box">
         <div id="header">
-            <h1>URL Short</h1>
+            <h1>URL Short </h1>
         </div>
         <div>
-            <p>To generate a short link to your URL simple enter a URL in the source field and click 'Generate' </p>
+            <p>To generate a short link to your URL simple enter the URL in the source field and click 'Generate' </p>
         </div>
         <div>
             <label>Source - </label>
