--- a/src/shortening_service/templates/shortening_service/index.html
+++ b/src/shortening_service/templates/shortening_service/index.html
@@ -1,90 +1,47 @@
-<!DOCTYPE html>
+{% load static %}
 <html>
-<head>
-    <title>URL Short </title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet">
-    <style>
-    body {
-        font-family: 'Teko', sans-serif;
-        color: #252A34;
-        text-align: center;
-        background-color: #8BC6EC;
-        background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-        font-size: 200%
-    }
+    <head>
+        <title>URL Short </title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'shortening_service/style.css' %}">
+    </head>
+    <script>
+        function CreateLink() {
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    alert(this.responseText);
+                }
+        };
+        xhttp.open("POST", "Your Rest URL Here", true);
+        xhttp.setRequestHeader("Content-type", "application/json");
+        xhttp.send("Your JSON Data Here");
+        }
+        function Alert() {
+            alert("Test Alert");
+        };
+    </script>
+    <body>
+        <div id="main_box">
+            <div id="header">
+                <h1>URL Short</h1>
+            </div>
+            <div>
+                <p>To generate a short link to your URL simple enter the URL in the source field and click 'Generate'</p>
+            </div>
+            <div>
+                <form method="POST">
+                <label>Source - </label>
+                <input id="source_link" type="text">
+                <button id="generate" role="generate" type="button" onclick="Alert()">Generate!</button>
+                </form>
+            </div>
+            <p>You will then see your generated link below</p>
+            <div id="generated_link">
 
-
-    #main_box {
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-
-    #generate {
-        background: #FF4742;
-        border: 1px solid #FF4742;
-        border-radius: 6px;
-        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
-        box-sizing: border-box;
-        color: #FFFFFF;
-        cursor: pointer;
-        display: inline-block;
-        font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-        font-size: 16px;
-        font-weight: 800;
-        line-height: 16px;
-        min-height: 40px;
-        outline: 0;
-        padding: 12px 14px;
-        text-align: center;
-        text-rendering: geometricprecision;
-        text-transform: none;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        vertical-align: middle;
-    }
-
-    #generate:hover,
-    #generate:active {
-        background-color: initial;
-        background-position: 0 0;
-        color: #FF4742;
-    }
-
-    #button-24:active {
-        opacity: .5;
-    }
-
-    #source_link {
-        border-radius: 20px;
-        background: transparent;
-        height: 30px;
-    }
-</style>
-</head>
-<body>
-    <div id="main_box">
-        <div id="header">
-            <h1>URL Short </h1>
+            </div>
         </div>
-        <div>
-            <p>To generate a short link to your URL simple enter the URL in the source field and click 'Generate' </p>
-        </div>
-        <div>
-            <label>Source - </label>
-            <input id="source_link" type="text">
-            <button id="generate" role="generate" type="button">Generate!</button>
-        </div>
-        <p>You will then see your generated link below</p>
-        <div id="generated_link">
-
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
